--- a/README.yml
+++ b/README.yml
@@ -3,5 +3,5 @@
 owner:
   firstname: "Venkata Pramod Kumar"
   lastname: "Duvvuri"
-  hid: "your hid number"
+  hid: "fa18-523-58"
   community: "e534"
