--- a/README.yml
+++ b/README.yml
@@ -13,10 +13,10 @@ technologies:
   - url: https://github.com/cloudmesh/technologies/blob/master/chapters/tech/dc.js.md
  paper:
   title: "Caffe: A Deep Learning Framework"
-  url: TBD
+  url: https://github.com/cloudmesh-community/fa18-523-57/tree/master/paper
   group: fa18-523-57
  project:
-  title: ""
-  url: TBD
+  title: Historical Storm Data Analysis with HBase
+  url: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-report
   group: fa18-523-57
-  code: TBD
+  code: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-report/project-code
