Added Profile Link

--- a/README.yml
+++ b/README.yml
@@ -5,6 +5,7 @@ owner:
   hid: "fa18-523-58"
   community: "e534"
   semester: "fa18"
+  profile: "https://github.com/dvpramodkumar"
 technologies:
   - url: https://github.com/cloudmesh/technologies/blob/master/chapters/tech/google-cloud-sql.md
   - url: https://github.com/cloudmesh/technologies/blob/master/chapters/tech/dryad.md
@@ -18,7 +19,7 @@ paper:
     url: https://github.com/cloudmesh-community/fa18-523-58/tree/master/paper
     group: fa18-523-57
 project:
-  - keyword: Data Visualization, HBase
+  - keyword: Analysis, Visualization, HBase
     title: Historical Storm Data Analysis with HBase
     url: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-report
     group: fa18-523-57
