--- a/README.yml
+++ b/README.yml
@@ -21,6 +21,6 @@ paper:
 project:
   - keyword: Visualization, HBase
     title: Historical Storm Data Analysis with HBase
-    url: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-report
+    url: https://github.com/cloudmesh-community/fa18-523-57/blob/master/project-report/report.md
     group: fa18-523-57
     code: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-code
