--- a/README.yml
+++ b/README.yml
@@ -19,8 +19,8 @@ paper:
     url: https://github.com/cloudmesh-community/fa18-523-58/blob/master/paper/paper.md
     group: fa18-523-57
 project:
-  - keyword: Visualization, MongoDB, PySpark
-    title: Historical Storm Data Analysis with MongoDB
+  - keyword: Visualization, Cosmos DB, Machine Learning
+    title: Historical Storm Data Analysis with CosmosDB
     url: https://github.com/cloudmesh-community/fa18-523-57/blob/master/project-report/report.md
     group: fa18-523-57
     code: https://github.com/cloudmesh-community/fa18-523-57/tree/master/project-code
